smurf docs sun258: tweak image size

--- a/applications/smurf/docs/sun258/sun258.tex
+++ b/applications/smurf/docs/sun258/sun258.tex
@@ -22,7 +22,7 @@
   ACSIS data into data cubes, and raw SCUBA-2 data into images.
 }
 \starfunders{University of British Columbia \& the Science \& Technology Facilities Council}
-\startitlepic{\includegraphics[scale=0.3]{sun258_logo}}
+\startitlepic{\includegraphics[width=0.55\textwidth]{sun258_logo}}
 
 
 
@@ -292,7 +292,7 @@ MCE information that can be included in the output catalogue using the
 
 \begin{figure}
 \begin{center}
-\includegraphics{sun258_scan_pattern}
+\includegraphics[width=1\textwidth]{sun258_scan_pattern}
 \caption{The telescope positions during observation number 7 on
   20090107. The plot is created by \topcat\ from the output from
 \jcmtstate\ plotting the DRA columns against the DDEC column. The pong
