README: Add CentOS 7 prerequisites.
This may not be complete and libxml2-devel has yet to be confirmed
as enabling the SOAP::Lite build (for Astro::Catlog).

--- a/README
+++ b/README
@@ -458,3 +458,12 @@ Arch Linux:
    netpbm
    tcsh
    texlive-most
+
+CentOS 7:
+   libXext-devel
+   libXau-devel
+   libX11-devel
+   libXt-devel
+   libxml2-devel
+   ncurses-devel
+   texlive-multirow
