docs: Add a missing cropping configuration parameter.
The default is rectangular.  Even though a map radius is specified
the PICARD recipe does not think umm perhaps the user wants to crop
a circle and default the CROP_METHOD to circle.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -2824,6 +2824,7 @@ file is shown below.
 \begin{verbatim}
 [CROP_SCUBA2_IMAGES]
 MAP_RADIUS = 1800.0
+CROP_METHOD = circle
 \end{verbatim}
 \end{quote}
 \end{center}
